--- a/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/Bilibili.yaml
@@ -14,6 +14,7 @@ payload:
   - DOMAIN-SUFFIX,bilibili.tv
   - DOMAIN-SUFFIX,biligame.com
   - DOMAIN-SUFFIX,biligame.net
+  - DOMAIN-SUFFIX,bilivideo.cn
   - DOMAIN-SUFFIX,bilivideo.com
   - DOMAIN-SUFFIX,hdslb.com
   - DOMAIN-SUFFIX,im9.com
