--- a/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-KEYWORD,ggpht
   - DOMAIN-KEYWORD,googlevideo
   - DOMAIN-KEYWORD,youtube
+  - DOMAIN-SUFFIX,ggpht.com
   - DOMAIN-SUFFIX,googlevideo.com
   - DOMAIN-SUFFIX,gvt0.com
   - DOMAIN-SUFFIX,gvt1.com
