--- a/Rules-Complete/Provider/Media/GlobalTV/myTV SUPER.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/myTV SUPER.yaml
@@ -2,4 +2,6 @@ payload:
   # > myTV_SUPER
   # - User-Agent,mytv*
   - DOMAIN-SUFFIX,mytvsuper.com
+  - DOMAIN-SUFFIX,mytvsuperlimited.hb.omtrdc.net
+  - DOMAIN-SUFFIX,mytvsuperlimited.sc.omtrdc.net
   - DOMAIN-SUFFIX,tvb.com
