--- a/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/encoreTVB.yaml
@@ -1,6 +1,10 @@
 payload:  
   # > encoreTVB
   # - User-Agent,encoreTVB*
+  - DOMAIN-SUFFIX,content.jwplatform.com
   - DOMAIN-SUFFIX,encoretvb.com
+  - DOMAIN-SUFFIX,videos-f.jwpsrv.com
+  - DOMAIN,bcbolt446c5271-a.akamaihd.net
   - DOMAIN,content.jwplatform.com
+  - DOMAIN,edge.api.brightcove.com
   - DOMAIN,videos-f.jwpsrv.com
