--- a/Rules-Complete/Provider/Domestic.yaml
+++ b/Rules-Complete/Provider/Domestic.yaml
@@ -20,6 +20,9 @@ payload:
   - DOMAIN-KEYWORD,vpimg
   - DOMAIN-KEYWORD,xiami
   - DOMAIN-KEYWORD,xiaomi
+  - DOMAIN-KEYWORD,agefans
+  - DOMAIN-KEYWORD,imomoe
+  - DOMAIN-SUFFIX,pianku.tv
   - DOMAIN-SUFFIX,00cdn.com
   - DOMAIN-SUFFIX,10010.com
   - DOMAIN-SUFFIX,115.com
