--- a/Rules-Complete/Provider/Media/GlobalTV/myTV SUPER.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/myTV SUPER.yaml
@@ -1,7 +1,5 @@
 payload:  
   # > myTV_SUPER
-  # - User-Agent,mytv*
+  # - USER-AGENT,mytv*
   - DOMAIN-SUFFIX,mytvsuper.com
-  - DOMAIN-SUFFIX,mytvsuperlimited.hb.omtrdc.net
-  - DOMAIN-SUFFIX,mytvsuperlimited.sc.omtrdc.net
   - DOMAIN-SUFFIX,tvb.com
