--- a/Rules-Complete/Provider/PayPal.yaml
+++ b/Rules-Complete/Provider/PayPal.yaml
@@ -1,6 +1,6 @@
 payload:  
   # > PayPal
-  # - PROCESS-NAME-Agent,PayPal*
+  # - USER-AGENT,PayPal*
   - DOMAIN-KEYWORD,paypal
   - DOMAIN-SUFFIX,paypal.com
   - DOMAIN-SUFFIX,paypalobjects.com
