--- a/Rules-Complete/Provider/Media/GlobalTV/Abema TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Abema TV.yaml
@@ -1,21 +1,10 @@
 payload: 
   # > AbemaTV
-  # - User-Agent,AbemaTV*
-  - DOMAIN-KEYWORD,abematv.akamaized.net
+  # - USER-AGENT,AbemaTV*
+  - PROCESS-NAME,tv.abema
   - DOMAIN-SUFFIX,abema.io
   - DOMAIN-SUFFIX,abema.tv
-  - DOMAIN-SUFFIX,adx.promo
   - DOMAIN-SUFFIX,akamaized.net
   - DOMAIN-SUFFIX,ameba.jp
-  - DOMAIN-SUFFIX,amebame.com
-  - DOMAIN-SUFFIX,amebaownd.com
-  - DOMAIN-SUFFIX,amebaowndme.com
-  - DOMAIN-SUFFIX,ameblo.jp
-  - DOMAIN-SUFFIX,bucketeer.jp
-  - DOMAIN-SUFFIX,d1otoma47x30pg.cloudfront.net
-  - DOMAIN-SUFFIX,d2wy8f7a9ursnm.cloudfront.net
-  - DOMAIN-SUFFIX,dokusho-ojikan.jp
-  - DOMAIN-SUFFIX,hayabusa.dev
   - DOMAIN-SUFFIX,hayabusa.io
-  - DOMAIN-SUFFIX,hayabusa.media
-  - DOMAIN-SUFFIX,winticket.jp
+  - DOMAIN-KEYWORD,abematv.akamaized.net
