--- a/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
@@ -1,51 +1,34 @@
-payload:
+payload:  
   # > Amazon Prime Video
-  # - User-Agent,InstantVideo.US*
-  # - User-Agent,Prime%20Video*
-  - DOMAIN-KEYWORD,avoddashs
+  # - USER-AGENT,InstantVideo.US*
+  # - USER-AGENT,Prime%20Video*
   - DOMAIN-SUFFIX,aiv-cdn.net
-  - DOMAIN-SUFFIX,aiv-delivery.net
-  - DOMAIN-SUFFIX,amazon.co
-  - DOMAIN-SUFFIX,amazon.co.jp
-  - DOMAIN-SUFFIX,amazon.com
   - DOMAIN-SUFFIX,amazonaws.co.uk
   - DOMAIN-SUFFIX,amazonaws.com
-  - DOMAIN-SUFFIX,amazonprimevideo.cn
-  - DOMAIN-SUFFIX,amazonprimevideo.com.cn
-  - DOMAIN-SUFFIX,amazonprimevideos.com
-  - DOMAIN-SUFFIX,amazonvideo.cc
   - DOMAIN-SUFFIX,amazonvideo.com
-  - DOMAIN-SUFFIX,atv-ps.amazon.com
-  - DOMAIN-SUFFIX,avodmp4s3ww-a.akamaihd.net
-  - DOMAIN-SUFFIX,fls-na.amazon.com
   - DOMAIN-SUFFIX,llnwd.net
-  - DOMAIN-SUFFIX,media-amazon.com
-  - DOMAIN-SUFFIX,prime-video.com
-  - DOMAIN-SUFFIX,primevideo.cc
   - DOMAIN-SUFFIX,primevideo.com
-  - DOMAIN-SUFFIX,primevideo.info
-  - DOMAIN-SUFFIX,primevideo.org
-  - DOMAIN-SUFFIX,primevideo.tv
+  - DOMAIN-SUFFIX,media-amazon.com
   - DOMAIN,atv-ps.amazon.com
-  - DOMAIN,d1v5ir2lpwr8os.cloudfront.net
-  - DOMAIN,d22qjgkvxw22r6.cloudfront.net
-  - DOMAIN,d25xi40x97liuc.cloudfront.net
-  - DOMAIN,d27xxe7juh1us6.cloudfront.net
-  - DOMAIN,dmqdd6hw24ucf.cloudfront.net
   - DOMAIN,fls-na.amazon.com
+
+  - DOMAIN, atv-ps.amazon.com
+  - DOMAIN, fls-na.amazon.com
+  - DOMAIN-SUFFIX, media-amazon.com
+  - DOMAIN-SUFFIX,amazon.co.jp
+  - DOMAIN-SUFFIX,amazon.com
   - IP-CIDR,13.32.0.0/15,no-resolve
   - IP-CIDR,13.35.0.0/17,no-resolve
   - IP-CIDR,18.184.0.0/15,no-resolve
   - IP-CIDR,18.194.0.0/15,no-resolve
   - IP-CIDR,18.208.0.0/13,no-resolve
   - IP-CIDR,18.232.0.0/14,no-resolve
-  - IP-CIDR,52.200.0.0/13,no-resolve
   - IP-CIDR,52.58.0.0/15,no-resolve
   - IP-CIDR,52.74.0.0/16,no-resolve
   - IP-CIDR,52.77.0.0/16,no-resolve
   - IP-CIDR,52.84.0.0/15,no-resolve
+  - IP-CIDR,52.200.0.0/13,no-resolve
+  - IP-CIDR,54.93.0.0/16,no-resolve
   - IP-CIDR,54.156.0.0/14,no-resolve
   - IP-CIDR,54.226.0.0/15,no-resolve
   - IP-CIDR,54.230.156.0/22,no-resolve
-  - IP-CIDR,54.93.0.0/16,no-resolve
-  - PROCESS-NAME,com.amazon.avod.thirdpartyclient
