--- a/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
@@ -1,12 +1,10 @@
 payload:  
   # > Discovery Plus
-  # - User-Agent,DPlus*
+  - PROCESS-NAME,com.discovery.discoveryplus.mobile
+  
   - DOMAIN-SUFFIX,content-ause1-ur-discovery1.uplynk.com
   - DOMAIN-SUFFIX,disco-api.com
-  - DOMAIN-SUFFIX,discoveryplus.co.uk
   - DOMAIN-SUFFIX,discoveryplus.com
-  - DOMAIN-SUFFIX,discoveryplus.in
-  - DOMAIN-SUFFIX,dnitv.com
   - DOMAIN-SUFFIX,fwmrm.net
   - DOMAIN-SUFFIX,getblueshift.com
   - DOMAIN-SUFFIX,litix.io
