--- a/Rules-Complete/Provider/Media/GlobalTV/HBO.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/HBO.yaml
@@ -1,23 +1,13 @@
 payload:
   # > HBO Max
-  # - USER-AGENT,HBOMAX*
-  # - USER-AGENT,HBO%20NOW*
-  # - USER-AGENT,HBO%20GO%20PROD%20HKG*
-  - DOMAIN-SUFFIX,cinemax.com
-  - DOMAIN-SUFFIX,execute-api.ap-southeast-1.amazonaws.com
-  - DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com
-  - DOMAIN-SUFFIX,forthethrone.com
+  - PROCESS-NAME,com.hbo.hbonow
   - DOMAIN-SUFFIX,hbo.com
-  - DOMAIN-SUFFIX,hbogeo.cust.footprint.net
   - DOMAIN-SUFFIX,hbogo.com
-  - DOMAIN-SUFFIX,hbogoasia.com
-  - DOMAIN-SUFFIX,hbogoasia.hk
+  - DOMAIN-SUFFIX,hbonow.com
   - DOMAIN-SUFFIX,hbomax.com
   - DOMAIN-SUFFIX,hbomaxcdn.com
-  - DOMAIN-SUFFIX,hbonow.com
-  - DOMAIN-SUFFIX,manifest.prod.boltdns.net
-  - DOMAIN-SUFFIX,maxgo.com
-  - DOMAIN-SUFFIX,youboranqs01.com
+
+  # > HBO GO
   - DOMAIN,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com
   - DOMAIN,bcbolthboa-a.akamaihd.net
   - DOMAIN,cf-images.ap-southeast-1.prod.boltdns.net
@@ -29,30 +19,5 @@ payload:
   - DOMAIN,hboasia5-i.akamaihd.net
   - DOMAIN,players.brightcove.net
   - DOMAIN,s3-ap-southeast-1.amazonaws.com
-  - PROCESS-NAME,com.hbo.hbonow
-  # > HBO Asia
-  - DOMAIN-SUFFIX,hboasia.com
   - DOMAIN-SUFFIX,hbogoasia.com
   - DOMAIN-SUFFIX,hbogoasia.hk
-  - DOMAIN-SUFFIX,bcbolthboa-a.akamaihd.net
-  - DOMAIN-SUFFIX,hboasia1-i.akamaihd.net
-  - DOMAIN-SUFFIX,hboasia2-i.akamaihd.net
-  - DOMAIN-SUFFIX,hboasia3-i.akamaihd.net
-  - DOMAIN-SUFFIX,hboasia4-i.akamaihd.net
-  - DOMAIN-SUFFIX,hboasia5-i.akamaihd.net
-  - DOMAIN-SUFFIX,hboasialive.akamaized.net
-  - DOMAIN-SUFFIX,hbogoprod-vod.akamaized.net
-  - DOMAIN-SUFFIX,44wilhpljf.execute-api.ap-southeast-1.amazonaws.com
-  - DOMAIN-SUFFIX,s3-ap-southeast-1.amazonaws.com
-  - DOMAIN-SUFFIX,cf-images.ap-southeast-1.prod.boltdns.net
-  - DOMAIN-SUFFIX,dai3fd1oh325y.cloudfront.net
-  - DOMAIN-SUFFIX,hbolb.onwardsmg.com
-  - DOMAIN-SUFFIX,hbounify-prod.evergent.com
-  - DOMAIN-SUFFIX,players.brightcove.net
-  # > HBO NOW
-  - DOMAIN-SUFFIX,now-ashare.com
-  - DOMAIN-SUFFIX,now-tv.com
-  - DOMAIN-SUFFIX,now.com
-  - DOMAIN-SUFFIX,now.com.hk
-  - DOMAIN-SUFFIX,nowe.com
-  - DOMAIN-SUFFIX,nowe.hk
