--- a/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml
@@ -1,5 +1,6 @@
 payload:
   # > Hulu
+  - PROCESS-NAME,com.hulu.plus
   - DOMAIN-SUFFIX,cws-hulu.conviva.com
   - DOMAIN-SUFFIX,hulu.com
   - DOMAIN-SUFFIX,hulu.hb.omtrdc.net
@@ -7,53 +8,10 @@ payload:
   - DOMAIN-SUFFIX,huluad.com
   - DOMAIN-SUFFIX,huluim.com
   - DOMAIN-SUFFIX,hulustream.com
-  - PROCESS-NAME,com.hulu.plus
-  - DOMAIN-SUFFIX,112263.com
-  - DOMAIN-SUFFIX,assetshuluimcom-a.akamaihd.net
-  - DOMAIN-SUFFIX,callhulu.com
-  - DOMAIN-SUFFIX,findyourlimits.com
-  - DOMAIN-SUFFIX,freehulu.com
-  - DOMAIN-SUFFIX,hooloo.tv
-  - DOMAIN-SUFFIX,hoolu.com
-  - DOMAIN-SUFFIX,hoolu.tv
-  - DOMAIN-SUFFIX,hu1u.com
-  - DOMAIN-SUFFIX,huloo.cc
-  - DOMAIN-SUFFIX,huloo.tv
-  - DOMAIN-SUFFIX,hulu.tv
-  - DOMAIN-SUFFIX,hulu.us
-  - DOMAIN-SUFFIX,huluaction.com
-  - DOMAIN-SUFFIX,huluapp.com
-  - DOMAIN-SUFFIX,huluasks.com
-  - DOMAIN-SUFFIX,hulucall.com
-  - DOMAIN-SUFFIX,hulufree.com
-  - DOMAIN-SUFFIX,hulugans.com
-  - DOMAIN-SUFFIX,hulugermany.com
-  - DOMAIN-SUFFIX,hulugo.com
-  - DOMAIN-SUFFIX,huluinstantmessenger.com
-  - DOMAIN-SUFFIX,huluitaly.com
-  - DOMAIN-SUFFIX,hulunet.com
-  - DOMAIN-SUFFIX,hulunetwork.com
-  - DOMAIN-SUFFIX,huluplus.com
-  - DOMAIN-SUFFIX,hulupremium.com
-  - DOMAIN-SUFFIX,hulupurchase.com
-  - DOMAIN-SUFFIX,huluqa.com
-  - DOMAIN-SUFFIX,hulurussia.com
-  - DOMAIN-SUFFIX,huluspain.com
-  - DOMAIN-SUFFIX,hulusports.com
-  - DOMAIN-SUFFIX,huluteam.com
-  - DOMAIN-SUFFIX,hulutv.com
-  - DOMAIN-SUFFIX,huluusa.com
-  - DOMAIN-SUFFIX,joinmaidez.com
-  - DOMAIN-SUFFIX,mushymush.tv
-  - DOMAIN-SUFFIX,myhulu.com
-  - DOMAIN-SUFFIX,originalhulu.com
-  - DOMAIN-SUFFIX,payhulu.com
-  - DOMAIN-SUFFIX,registerhulu.com
-  - DOMAIN-SUFFIX,thehulubraintrust.com
-  - DOMAIN-SUFFIX,wwwhuluplus.com
-  # >> HuluJapan
+
+  # > Hulu(フールー)
+  - PROCESS-NAME,jp.happyon.android
   - DOMAIN-SUFFIX,happyon.jp
-  - DOMAIN-SUFFIX,hjholdings.jp
   - DOMAIN-SUFFIX,hulu.jp
   - DOMAIN-SUFFIX,prod.hjholdings.tv
   - DOMAIN-SUFFIX,streaks.jp
