--- a/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml
@@ -1,18 +1,15 @@
 payload:
   # > ViuTV
-  # - User-Agent,ViuTV*
+  - PROCESS-NAME,com.hktve.viutv
+
   - DOMAIN-SUFFIX,bootstrapcdn.com
   - DOMAIN-SUFFIX,cloudfront.net
   - DOMAIN-SUFFIX,cognito-identity.us-east-1.amazonaws.com
-  - DOMAIN-SUFFIX,d1k2us671qcoau.cloudfront.net
-  - DOMAIN-SUFFIX,d2anahhhmp1ffz.cloudfront.net
-  - DOMAIN-SUFFIX,dfp6rglgjqszk.cloudfront.net
   - DOMAIN-SUFFIX,firebaseio.com
   - DOMAIN-SUFFIX,jwpcdn.com
   - DOMAIN-SUFFIX,jwplayer.com
   - DOMAIN-SUFFIX,mobileanalytics.us-east-1.amazonaws.com
   - DOMAIN-SUFFIX,nowe.com
   - DOMAIN-SUFFIX,viu.com
-  - DOMAIN-SUFFIX,viu.now.com
   - DOMAIN-SUFFIX,viu.tv
-  - PROCESS-NAME,com.vuclip.viu
+  - DOMAIN-SUFFIX,viu.now.com
