--- a/Rules-Complete/Provider/Media/GlobalTV/YouTube Music.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/YouTube Music.yaml
@@ -1,4 +1,4 @@
 payload:  
   # > Youtube Music
-  # - User-Agent,*YouTubeMusic*
-  # - User-Agent,*com.google.ios.youtubemusic*
+  - PROCESS-NAME,com.google.android.apps.youtube.music
+  - PROCESS-NAME,com.google.android.youtube.tvmusic
