--- a/Rules-Complete/Provider/Telegram.yaml
+++ b/Rules-Complete/Provider/Telegram.yaml
@@ -1,15 +1,13 @@
 payload:
   # > Telegram
+  # - PROCESS-NAME,org.telegram.messenger
+  # - PROCESS-NAME,Telegram
   - DOMAIN-KEYWORD,telegram
   - DOMAIN-SUFFIX,t.me
   - DOMAIN-SUFFIX,tdesktop.com
-  - DOMAIN-SUFFIX,telecomspace.com
   - DOMAIN-SUFFIX,telegra.ph
-  - DOMAIN-SUFFIX,telegram.dog
   - DOMAIN-SUFFIX,telegram.me
   - DOMAIN-SUFFIX,telegram.org
-  - DOMAIN-SUFFIX,telegramdownload.com
-  - DOMAIN-SUFFIX,telegraph.co.uk
   - DOMAIN-SUFFIX,telesco.pe
   - DOMAIN-SUFFIX,tx.me
   - IP-CIDR,109.239.140.0/24,no-resolve
@@ -18,6 +16,11 @@ payload:
   - IP-CIDR,2001:b28:f23d::/48,no-resolve
   - IP-CIDR,2001:b28:f23f::/48,no-resolve
   - IP-CIDR,91.108.0.0/16,no-resolve
+  - IP-CIDR,91.108.12.0/22,no-resolve
+  - IP-CIDR,91.108.16.0/22,no-resolve
+  - IP-CIDR,91.108.4.0/22,no-resolve
+  - IP-CIDR,91.108.56.0/22,no-resolve
+  - IP-CIDR,91.108.8.0/22,no-resolve
   - IP-CIDR6,2001:67c:4e8::/48,no-resolve
   - IP-CIDR6,2001:b28:f23d::/48,no-resolve
   - IP-CIDR6,2001:b28:f23f::/48,no-resolve
