--- a/Rules-Complete/Provider/LAN.yaml
+++ b/Rules-Complete/Provider/LAN.yaml
@@ -7,16 +7,29 @@ payload:
   - DOMAIN-SUFFIX,ip6-loopback
   - DOMAIN-SUFFIX,local
   - DOMAIN-SUFFIX,localhost
+  - IP-CIDR,0.0.0.0/8,no-resolve
   - IP-CIDR,10.0.0.0/8,no-resolve
   - IP-CIDR,100.64.0.0/10,no-resolve
   - IP-CIDR,127.0.0.0/8,no-resolve
+  - IP-CIDR,169.254.0.0/16,no-resolve
+  - IP-CIDR,17.0.0.0/8,no-resolve
   - IP-CIDR,172.16.0.0/12,no-resolve
+  - IP-CIDR,192.0.0.0/24,no-resolve
+  - IP-CIDR,192.0.2.0/24,no-resolve
   - IP-CIDR,192.168.0.0/16,no-resolve
+  - IP-CIDR,198.18.0.0/15,no-resolve
   - IP-CIDR,198.18.0.0/16,no-resolve
+  - IP-CIDR,198.51.100.0/24,no-resolve
+  - IP-CIDR,203.0.113.0/24,no-resolve
+  - IP-CIDR,224.0.0.0/4,no-resolve
+  - IP-CIDR,255.255.255.255/32,no-resolve
+  - IP-CIDR6,::/128,no-resolve
   - IP-CIDR6,::1/128,no-resolve
+  - IP-CIDR6,100::/64,no-resolve
+  - IP-CIDR6,2001:db8::/32,no-resolve
   - IP-CIDR6,fc00::/7,no-resolve
-  - IP-CIDR6,fe80::/10,no-resolve
   - IP-CIDR6,fd00::/8,no-resolve
+  - IP-CIDR6,fe80::/10,no-resolve
 
   # Router managed 路由器管理域名
   - DOMAIN,router.asus.com
